# robolive

./: .dockerignore  .gitignore  .scalafmt.conf  DEPLOYMENT.md  Dockerfile.allscala  Dockerfile.client-protocols  Dockerfile.client_proto  Makefile  README.md  build.sbt  docker-compose.production.yml  docker-compose.yml  envoy.yaml  publish-docker
agent/: build.sbt
client/: .browserslistrc  .env  .env.development  .eslintignore  .eslintrc.json  .eslintrc.prod.json  .gitignore  .prettierignore  .prettierrc.json  README.md  cypress.json  elm.json  index.html  index.ts  package-lock.json  package.json  tsconfig.json  types.d.ts
deployment/: README.md
docs/: OperatorQueue.txt  OperatorRobotCall.txt  ice.txt  sdp.txt  turn.txt
gstmanaged/: build.sbt
infra/: README.md
legacy/: docker-compose.yml
microcontroller/: Alex Wires.md  ReADME.md
mjsip/: Makefile  build.sbt  make-HOWTO.txt  make_mjsip.bat  make_mjsip.sh  makefile-config  mjsip.cfg.txt
overlay/: Cargo.toml  Dockerfile  script.sh
overlay/src/: main.rs
project/: plugins.sbt  protoc.sbt
protocols/: Agent.proto  Client.proto  Common.proto  Control.proto  Info.proto  Inventory.proto  Puppet.proto  Registry.proto  Robot.proto  Session.proto  SipChannel.proto  Storage.proto
registry/: build.sbt
relay/: turn.cfg
robot/: Dockerfile  Dockerfile.gstreamer-1.16-buster  README.md  build.sbt  robot.py  test.env
robot-sca/: .gitignore  README.md  build.sbt
sdp/: build.sbt
signaling/: signaling.py
signalling/: Dockerfile  README.md  docker-compose.yml  installiation  kamailio.cfg  setup.cfg  tls.cfg
(+427 files in other folders)
