[package]
name = "overlay"
version = "0.1.0"
authors = ["Alexander Hasselbach <alex@arigativa.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.9"
gstreamer = "0.15.0"
gstreamer-rtsp-server = "0.15.0"

[[bin]]
name = "overlay"
path = "src/main.rs"
